welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:4: error: not found: value biscuits
biscuits=0;
^RunHalf:5: error: not found: value caseOranges
caseOranges=0;
^RunHalf:6: error: not found: value biscuits
while (2 * biscuits != caseOrange + 1){
           ^RunHalf:9: error: not found: value biscuits
		biscuits=biscuits+1;
                ^RunHalf:13: error: not found: value caseOranges
		caseOranges=caseOranges+1;
                ^