welcome.lessons.welcome.variables.RunHalf.scala.code
override def run() {
}
biscuits=0;
caseOranges=0;
while (2 * biscuits != caseOrange + 1){
	avance();
	if (estSurBiscuit()){
		biscuits=biscuits+1;
	
	}
	if (estSurOrange()){
		caseOranges=caseOranges+1;
	}
}
